--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,10 @@
 /* #757FB2   #4d4d4d */
 
-
+.graph-div {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5rem;
+}
 .App {
   text-align: center;
 }
@@ -137,6 +141,7 @@ cursor: pointer;
   justify-content: space-around;
   align-items: center;
   height: 17rem;
+  background-color: rgba(240, 247, 245, 0.741);
 }
 
 .footer-about {
