--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-/* #757FB2   #4d4d4d */
+/* colors #757FB2   #4d4d4d */
 
 .graph-div {
   margin-left: auto;
@@ -20,10 +20,10 @@
   background-color: #757FB2;
   border-bottom: 1px solid #ccc;
   position: absolute;
-  top: 7rem; /* Adjust according to your navigation bar height */
+  top: 7rem; 
   left: 0;
   right: 0;
-  z-index: 1000; /* Ensure the container is above the map */
+  z-index: 1000; 
 }
 
 .stats {
